Changes in version 2.15.0

 * Always read in prologue files as UTF8 (#286 and Cabal #1721)

Changes in version 2.14.1

 * Render * and -> with their UnicodeSyntax equivalents if -U is enabled

 * Display minimal complete definitions for type classes

 * Hide right hand side of TF instances with hidden names on the RHS

Changes in version 2.14.0

 * Print entities with missing documentation (#258)

 * Print a warning message when given `-optghc` instead of `--optghc` (#5)

 * Add `--compatible-interface-versions` (#231)

 * Allow to generate latex documentation for FFI declarations (#247)

 * Add copyright and license information to generated documentation

 * Improved to Unicode support

 * Bold markup support

 * Nested paragraphs

 * Better escaping

 * Header markup

 * Parser should no longer fail to parse any markup

 * {-# OPTIONS_HADDOCK show-extensions #-} pragma will show the GHC extensions
   enabled in the module.

 * Properly render License field (#271)

 * Print type/data family instances (for exported types only)

 * Fix display of poly-kinded type operators (#189)

 * PatternSynonyms support

 * Fix display of implicit parameters (#260)

 * Fix rendering of Contents when links are present (#276)

 * Fix documentation duplication on record fields (#195)

 * Add `--source-entity-line` for exact line links (eg. things defined
   inside TH splices) (#79)

 * Display fixity information for names with nonstandard fixities

 * Bird tracks specified like "> code" no longer suffer from an extra leading
   space in the code output

Changes in version 2.13.2

 * Handle HsExplicitListTy in renamer (#213)

 * Allow haddock markup in deprecation messages

 * Export more types from Documentation.Haddock

 * Include everything that is required to run the test suite with the cabal
   package (#230)

Changes in version 2.13.1

 * Hide instances that are "internal" to a module

 * Add support for properties in documentation
